--- a/441-clients/src/Styles/App.css
+++ b/441-clients/src/Styles/App.css
@@ -8,13 +8,21 @@ body {
     font-family: "Helvetica Neue", sans-serif;
 }
 
-header {
+#header {
     background-image: url('/network.jpg');
     background-position: center;
     background-size: cover;
     color: white;
     font-family: Impact, Charcoal, sans-serif;
     height: max-content;
+}
+
+#header h1 {
+    font-size: 3.5rem;
+}
+
+#header h2 {
+    font-weight: 300;
 }
 
 div {
