--- a/441-clients/src/App.css
+++ b/441-clients/src/App.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap');
 
-body {
+html, body {
     font-family: 'Roboto', sans-serif;
     background-color: white;
     font-family: "Helvetica Neue", sans-serif;
+    height: 100%
 }
 
 #header {
@@ -38,16 +39,12 @@ div {
     font-weight: 300;
 }
 
-#custom h2, h3 {
-    font-weight: 500;
+#custom h2, #custom h3, #custom h4 {
+    font-weight: 300;
 }
 
 #custom h3, h4{
     padding: auto;
-}
-
-#custom h4 {
-    font-weight: 300;
 }
 
 #maketeamform {
