--- a/441-clients/src/App.css
+++ b/441-clients/src/App.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap');
 
-html, body {
+html, body, #root {
     font-family: 'Roboto', sans-serif;
     background-color: white;
-    font-family: "Helvetica Neue", sans-serif;
-    height: 100%
+    height: 100vh;
 }
 
 #header {
@@ -25,17 +24,41 @@ html, body {
     min-height: 100%;
 }
 
+.bg-landing {
+    background: rgb(236,236,236);
+/* background: linear-gradient(135deg, rgba(196, 241, 255, 0.2) 0%, rgba(253,187,45, 0.2) 100%); */
+    /* background: rgb(236,236,236); */
+    background: linear-gradient(112deg, rgba(236,236,236,1) 0%, rgb(212, 212, 212) 50%, rgba(222,222,222,1) 100%);
+}
+
 #header h1 {
-    font-size: 3.5rem;
-    font-weight: 300;
+    font-size: 4rem;
+    font-weight: 100;
 }
 
 #header h2 {
-    font-weight: 100 !important;
+    font-weight: 100;
 }
 
-div {
-    font-family: 'Roboto', sans-serif;
+#auth hr {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+#auth h1 {
+    font-size: 2.5rem;
+    font-weight: 900;
+}
+
+#auth h2 {
+    font-size: 1.6rem;
+}
+
+#auth h2, #auth h3, #auth h4 {
+    font-weight: 300;
+}
+
+#footer div, #footer span {
     font-weight: 300;
 }
 
