--- a/441-clients/src/App.css
+++ b/441-clients/src/App.css
@@ -90,6 +90,31 @@ html, body, #root {
     font-weight: 300;
 }
 
+#navtop {
+    font-weight: 300;
+    background-color: #343a40e5 !important;
+    backdrop-filter: blur(10px);
+}
+
+#navtop button {
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: .825rem;
+    padding: .2rem .4rem;
+}
+
+.custom-modal {
+    background-color: rgba(0, 0, 0, 0.2)
+    /* backdrop-filter: blur(4px); */
+}
+
+.modal-content {
+    /* background-color: #17a3b857 !important; */
+    background-color: #e5e5e5 !important;
+    /* backdrop-filter: blur(20px); */
+    /* color: #f8f9fa !important */
+}
+
 #footer div, #footer span {
     font-weight: 300;
 }
@@ -160,6 +185,21 @@ html, body, #root {
     /* text-transform: uppercase; */
 }
 
+#teamSchedule h3 {
+    font-size: 1.1rem;
+    text-transform: uppercase;
+}
+
+#teamSchedule h4 {
+    font-size: 1rem;
+    white-space: nowrap;
+    /* text-align: end; */
+}
+
+#teamSchedule .timeCard {
+    border-radius: 10px;
+}
+
 @media screen and (max-width: 991px) {
     #profile h1 {
         font-size: 2rem;
@@ -187,6 +227,24 @@ html, body, #root {
     #profile img {
         width: 60px;
         height: 60px;
+    }
+
+    #footer {
+        font-size: 0.8rem;
+    }
+
+    #main h1 {
+        font-size: 1.5rem; 
+    }
+
+    #main h2 {
+        font-size: 1.25rem;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    #footer {
+        font-size: 0.6rem;
     }
 }
 
